feat: fetching from the graph and blockchain

--- a/marketplace-ui/src/components/NFTBox/Nftbox.module.css
+++ b/marketplace-ui/src/components/NFTBox/Nftbox.module.css
@@ -1,7 +1,6 @@
-.main {
+.box{
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 }
-
