--- a/marketplace-ui/src/styles/globals.css
+++ b/marketplace-ui/src/styles/globals.css
@@ -1,11 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -19,8 +11,8 @@ body {
 }
 
 body {
-  background-color: black;
-  color: white;
+  background-color: beige;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 a {
